--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "SpaceApps Hackathon 2016 - Cross Campus, Pasadena, CA https://2016.spaceappschallenge.org/challenges/earth/emobile-pastoralism",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "body-parser": "^1.15.0",
+    "request": "^2.72.0"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
