--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "express": "^4.13.4",
     "firebase": "^2.4.2",
     "request": "^2.72.0"
   },
